--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mindee": "^4.30.0",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "openai": "^5.23.2",
     "pdf-parse": "^2.2.1",
