--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -19,6 +19,7 @@
     "react-calendar-heatmap": "^1.10.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-github-calendar": "^4.5.11",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
