--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-calendar-heatmap": "^1.10.0",
     "react-chartjs-2": "^5.3.0",
@@ -22,7 +23,10 @@
     "react-github-calendar": "^4.5.11",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-is": "^19.2.0",
     "react-router-dom": "^7.8.2",
+    "react-simple-code-editor": "^0.14.1",
+    "react-split-pane": "^0.1.92",
     "recharts": "^3.2.1"
   },
   "devDependencies": {
