--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,10 @@
   "description": "",
   "dependencies": {
     "@affinda/affinda": "^7.7.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google/generative-ai": "^0.24.1",
     "@gradio/client": "^1.19.1",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.1.2",
@@ -21,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "form-data": "^4.0.4",
     "gpt4all": "^4.0.0",
     "gradio-client": "^1.0.0",
@@ -31,9 +35,11 @@
     "multer-storage-cloudinary": "^4.0.0",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
+    "nodemon": "^3.1.11",
     "openai": "^5.23.2",
     "pdf-parse": "^2.2.1",
     "pdf-parse-fixed": "^1.1.1",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "wavefile": "^11.0.0"
   }
 }
