--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -12,20 +12,21 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.544.0",
-    "pdfjs-dist": "^5.4.394",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-calendar-heatmap": "^1.10.0",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-github-calendar": "^4.5.11",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-is": "^19.2.0",
-    "react-pdf": "^7.7.2",
     "react-router-dom": "^7.8.2",
+    "react-simple-code-editor": "^0.14.1",
+    "react-split-pane": "^0.1.92",
     "recharts": "^3.2.1"
   },
   "devDependencies": {
